@@ -1,6 +1,6 @@
 # G-Repo
 
-G-Repo is a tool developed in java and it is useful in the **Mining Software Repository**, this area aims to collect empirical evidence using the data available in software repositories present on github. For example:
+[G-Repo](https://sites.google.com/view/g-repo/home-page) is a tool developed in java and it is useful in the **Mining Software Repository**, this area aims to collect empirical evidence using the data available in software repositories present on github. For example:
 
 > *“When and Why Your Code Starts to Smell Bad (and Whether the Smells*
 Go Away)”
@@ -26,12 +26,16 @@ ___
 ___
 
 ### Requirements
-* Java 8+ ??
-* Python 3.8, six
-* @michele
+* Java 14, JavaFX 14
+* Python3, six
 ___
 
 ### Getting Started
+
+To start [G-Repo.jar](Demos/) run the command:
+
+`java -jar --module-path "path_to_javaFX-sdk\lib" --add-modules=javafx.controls,javafx.fxml G-Repo.jar`
+
 G-Repo provides functionality to search for repositories by native github [qualifiers](https://docs.github.com/en/github/searching-for-information-on-github/searching-for-repositories).
 
 ![](Demos/query_demo.gif)
@@ -50,12 +54,12 @@ The language detector script that G-Repo uses is able to classify the repositori
 ![](Demos/language.gif)
 ======
 
-By default the script uses a **nondeterministic** classification algorithm, this functionality is part of a design from the original Google project. If you want to enforce determinism make [`OUTPUT_TYPE`](https://github.com/MatHeartGaming/G-Repo/blob/master/risorse/GHLanguageDetection/detector.py#L57)```= 0```.
+By default the script uses a **nondeterministic** classification algorithm, this functionality is part of a design from the original Google project. If you want to enforce determinism make [`OUTPUT_TYPE = 0`](https://github.com/MatHeartGaming/G-Repo/blob/master/risorse/GHLanguageDetection/detector.py#L57).
 If in the repository there is no README.md file or is empty, does not have enough text or contains only special characters then the repository will be classified as **unknown**, same in case some repository should throw exceptions on the parserization, otherwise will be classified in **english**, **not-english** or **mixed**.
 ___
 
 ## References
-* [Project](https://github.com/blakeembrey/language-map) o [Json](https://github.com/blakeembrey/language-map/blob/master/languages.json) ???
+* The [language-map](https://github.com/blakeembrey/language-map) repository was used to generate the file used for the detection of the programming language-markup.
 
 * For language recognition the script uses the [LangDetect](https://github.com/Mimino666/langdetect) library, a direct port of Google's language-detection library from Java to Python, moreover if you want to use the script individually take a look [here](https://github.com/anasmounsif/README-language-detector) :rocket:
 
